# postgres_backup_plugin

./: .gitignore  CHANGELOG.md  CHANGELOG_schema_prefix.md  INSTALL.md  LICENSE  MANIFEST.in  PLUGIN_SUMMARY.md  PYPI_PUBLISHING.md  PYPI_SUMMARY.md  QUICK_START_CLEAN.md  QUICK_START_PYPI.md  README.md  __init__.py  exceptions.py  publish.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py.bak
core/: backup_engine.py  stream_wrapper.py
examples/: example_basic.py  example_clean_backup.py  example_custom_filters.py  example_custom_source_schema.py  example_django.py
exporters/: base.py  s3_exporter.py
filters/: __init__.py  base.py  common_filters.py
postgres_backup_plugin/: __init__.py  config.py
postgres_backup_plugin/core/: __init__.py  backup_engine.py  query_builder.py  stream_wrapper.py
postgres_backup_plugin/exporters/: __init__.py  file_exporter.py
